Maquetación de la web y creación de los primeros componentes

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- JQuery -->
+  <script type="text/javascript" src="assets/jQuery/jquery-3.2.1.min.js"></script>
+
+  <!-- Bootstrap -->
+  <script type="text/javascript" src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+
+  <!-- JavaScript -->
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/Footer-with-social-icons.css" />
+  <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
+
 </head>
 <body>
   <app-root></app-root>
