Añadidos los componentes necesarios para los artículos. Se ha añadido la funcionalidad de ver el detalle y añadir artículos.

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <!-- JavaScript -->
 
   <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/Footer-with-social-icons.css" />
   <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
 
